Bug 1304027 - Uplift recent changes to urlbar behavior and performance. r=adw, a=ritu

Includes:
partial uplift of Bug 1180944
Bug 1301093 - Part 1: don't wait for a result when we won't get one. r=adw
Bug 1301093 - Part 2: sanity check that delayed Enter applies to the expected search string. r=adw
Bug 1301093 - Part 3: fix delayed handleEnter regression. r=adw
Bug 1283329 - Perceptible pause when quickly typing and hitting enter in the urlbar. r=adw
Bug 1302472 - keyboard selected value in autocomplete popup cannot be confirmed with <enter> if completedefaultindex is false but completeselectedindex is true.